fixed spacing

--- a/style/basic.css
+++ b/style/basic.css
@@ -37,7 +37,7 @@ nav ul {
 nav li {
   display:inline;
   list-style-type: none;
-  padding-right: 2pc;
+  padding-right: 1pc;
 
 }
 
